fix: Fix scrollbars and window minimize/close actions for win

--- a/ui/desktop/app/styles/app.scss
+++ b/ui/desktop/app/styles/app.scss
@@ -29,12 +29,33 @@
 
   .rose-layout-global-body {
     max-height: 100vh;
-    overflow: hidden;
+    overflow: auto;
+
+    main {
+      flex-grow: 1;
+      overflow: auto;
+    }
   }
 
   .rose-layout-sidebar-sidebar,
   .rose-layout-sidebar-body {
     overflow-y: scroll;
+  }
+
+  // Windows OS specific overflow.
+  &.layout-scroll {
+    .rose-layout-global-body {
+      overflow-y: auto;
+
+      main {
+        overflow: unset;
+      }
+    }
+
+    .rose-layout-sidebar-sidebar,
+    .rose-layout-sidebar-body {
+      overflow-y: unset;
+    }
   }
 }
 
@@ -122,7 +143,6 @@
   -webkit-app-region: drag;
   -webkit-user-select: none;
   min-height: sizing.rems(l) * 2;
-  padding-left: sizing.rems(l) * 3;
   position: relative;
 
   .rose-header-brand, .rose-header-nav,
@@ -131,8 +151,20 @@
     -webkit-app-region: no-drag;
   }
 
-  &.header-shrink {
-    padding-left: 0;
+  &.header-cushion {
+    padding-left: sizing.rems(l) * 3;
+  }
+
+  .utilities-actions {
+    display: flex;
+    justify-content: center;
+
+    button {
+      background: transparent;
+      border: transparent;
+      color: var(--white);
+      margin: sizing.rems(xs);
+    }
   }
 
   .logotype {
@@ -223,13 +255,6 @@
 
 .nowrap {
   white-space: nowrap;
-}
-
-.rose-layout-global .rose-layout-global-body {
-  main {
-    flex-grow: 1;
-    overflow: auto;
-  }
 }
 
 .branded-card {
